--- a/backend/package.json
+++ b/backend/package.json
@@ -6,13 +6,13 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "better-sqlite3": "^7.4.0",
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1",
-    "sqlite3": "^5.0.2"
+    "morgan": "~1.9.1"
   }
 }
