--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "@vitejs/plugin-vue": "^1.2.3",
     "@vue/compiler-sfc": "^3.0.5",
     "ky": "^0.28.5",
-    "vite": "^2.3.5"
+    "sass-loader": "^12.0.0",
+    "vite": "^2.3.5",
+    "vue-router": "^4.0.8"
   }
 }
