--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,11 @@
     "@vitejs/plugin-vue": "^1.2.3",
     "@vue/compiler-sfc": "^3.0.5",
     "ky": "^0.28.5",
-    "sass-loader": "^12.0.0",
+    "bulma": "^0.9.3",
+    "sass": "^1.35.2",
+    "sass-loader": "^12.1.0",
     "vite": "^2.3.5",
-    "vue-router": "^4.0.8"
+    "vue-router": "^4.0.8",
+    "vuex": "^4.0.2"
   }
 }
