--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@vue/compiler-sfc": "^3.0.5",
     "ky": "^0.28.5",
     "bulma": "^0.9.3",
+    "bulma-block-list": "^0.5.0",
     "sass": "^1.35.2",
     "sass-loader": "^12.1.0",
     "vite": "^2.3.5",
