--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "passport-http": "^0.3.0",
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
+    "socket.io": "^4.1.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
