--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "bulma-block-list": "^0.5.0",
     "sass": "^1.35.2",
     "sass-loader": "^12.1.0",
+    "socket.io-client": "^4.1.3",
     "vite": "^2.3.5",
     "vue-router": "^4.0.8",
     "vuex": "^4.0.2"
