--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "ky": "^0.28.5",
     "bulma": "^0.9.3",
     "bulma-block-list": "^0.5.0",
+    "bulma-pageloader": "^0.3.0",
     "sass": "^1.35.2",
     "sass-loader": "^12.1.0",
     "socket.io-client": "^4.1.3",
