--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "better-sqlite3": "^7.4.0",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
