--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,8 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@heroicons/vue": "^1.0.4",
+    "vee-validate": "^4.4.11",
     "ky": "^0.28.5",
     "vue": "^3.0.5"
   },
@@ -15,11 +17,13 @@
     "bulma": "^0.9.3",
     "bulma-block-list": "^0.5.0",
     "bulma-pageloader": "^0.3.0",
+    "ky": "^0.28.5",
     "sass": "^1.35.2",
     "sass-loader": "^12.1.0",
     "socket.io-client": "^4.1.3",
     "vite": "^2.3.5",
     "vue-router": "^4.0.8",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "yup": "^0.32.9"
   }
 }
